fix(styles): hide scrollbar

--- a/frontend/src/assets/index.css
+++ b/frontend/src/assets/index.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
   transition: all .3s ease-in-out;
   user-select: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 .table-shadow {
